welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
	if(Color.green) {
                 ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if(couleurSol = true) {
                      ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
		avance()
                      ^SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
		gauche()
                      ^