welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var couleurSol:Boolean = false
	avance()
	getCouleurSol()
	if(Color.green) {
		couleurSol = true
	}
	recule()
	if(couleurSol = true) {
		avance()
	}
	else {
		gauche()
	}
	
}        
